Remove AATF-ATF from list - text too close to exclamation mark Style fix for Tasklist

--- a/src/EA.Weee.Web/Content/weee/_tables.scss
+++ b/src/EA.Weee.Web/Content/weee/_tables.scss
@@ -110,6 +110,12 @@
     @extend .break-word;
 }
 
+.weee-actions-display {
+    text-align: right;
+    padding-left: 0.5em !important;
+    @extend .break-word;
+}
+
 .weee-tonnage-left-aligned-display {
     text-align: left;
     padding-right: 1em !important;
